Stop tooltips from wrapping

--- a/graphic_templates/_base/css/base.less
+++ b/graphic_templates/_base/css/base.less
@@ -114,6 +114,7 @@ a {
         padding: 8px;
         font-size: 12px;
         pointer-events: none;
+		white-space: nowrap;
     }
 }
 
